--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,17 @@ div.wrapper{
   text-decoration: underline;
 }
 
+.info-input {
+  margin:0;
+  padding: 15px;
+}
+
+.credit-input-btn {
+  width: 300px;
+  height: 30px;
+  margin-bottom: 20px;
+
+}
 
 /* 사이드바 */
 
