--- a/css/index.css
+++ b/css/index.css
@@ -31,19 +31,16 @@
 
 .index-nav {
   font-family: "ChosunGs";
-  text-align: right;
-  display: flex;
-
-}
-
-.index-nav h1 {
-  margin: 0; /* h1의 기본 margin 제거 */
+  text-align: center;
+  display: flex; /* Flexbox를 사용하여 수평 정렬 */
+  justify-content: center; /* 가운데 정렬 */
 }
 
 .index-nav a {
   margin-right: 20px; /* 각 링크 사이의 간격 조절 */
+  margin-left: 20px;
   text-decoration: none;
-  text-align: right;
+  color: rgb(157, 95, 7);
 }
 
 .index-nav a:hover {
