--- a/css/index.css
+++ b/css/index.css
@@ -1,179 +1,109 @@
-/* 오픈소스 */
-
 @font-face {
-  /* 읏맨 궁서체 */
-  font-family: 'OKGUNG';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-02@1.0/OKGUNG.woff2') format('woff2');
-  font-weight: normal;
+  font-family: 'NPSfontBold';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2310@1.0/NPSfontBold.woff2') format('woff2');
+  font-weight: 700;
   font-style: normal;
-}
-@font-face {
-  /* 조선 궁서체 */
-  font-family: 'ChosunGs';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/ChosunGs.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-* {
-  margin: 0;
-  padding: 0;
 }
 
 body {
-  width: 100%;
-  height: 100%;
-  background-color: #D8C2AC ; /* C0A080 */
-} 
-
-main {
-  margin-top: 10px;
-  padding: 0;
-  width: 80%;
-  height: 500px ;
-  float: right;
-
-}
-
-footer {
   margin: 0;
-  padding: 0;
-
+  font-family: 'NPSfontBold';
 }
 
-/*  메인 페이지 헤더 */
-
-header {
-  margin: 0;
-  padding: 0;
-  background-color: #F1E5DA;
-}
-
-.index-title { 
-  margin: 0;
-  padding: 20px 30px;
-  color: #000000;
-  
-  text-align: center;
-  font-family: 'OKGUNG';
-  font-size: 32px;
-  /* padding: 20px;
-  margin: 0px; */
-}
-
-.index-nav {
-  font-family: "ChosunGs";
-  display: flex; /* Flexbox를 사용하여 수평 정렬 */
-  justify-content: center; /* 가운데 정렬 */
-}
-
-.index-nav h1 {
-  margin-bottom: 10px;
-  padding: 0;
-  font-size: 1.5em;
-}
-
-.index-nav a {
-  margin-right: 20px; 
-  margin-left: 20px;
-
+a {
   text-decoration: none;
-  color: rgb(157, 95, 7);
+  color: white;
 }
 
-.index-nav a:hover {
-  text-decoration: underline;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #0f1823;
+  padding: 8px 12px;
+
 }
 
-/* 메인페이지 바디*/
+.navbar_logo {
+  font-size: 24px;
+  padding-left: 12px;
+}
 
-.conversion-form {
-  margin: 0 auto;
-  padding: 20px;
+.navbar_logo i {
+  color: tomato;
+}
 
-  width: 50%;
-  background-color: rgb(238, 238, 238);
-  text-align: center;
-  border: 3px solid #6f4f28;
+.navbar_menu {
+  display: flex;
+  list-style: none;
+  padding-left: 0;
+}
 
-  position: relative;
-  right: 10%;
+.navbar_menu li {
+  padding: 8px 12px; 
+}
+
+.navbar_menu li:hover {
+  background-color: tomato;
+  border-radius: 8px;
+}
+
+.navbar_icons {
+  display: flex;
+  list-style: none;
+  padding-left: 0;
+}
+
+.navbar_icons li {
+  padding: 8px 12px;
+}
+
+.navbar_toggleBtn {
+  display: none;
+}
+
+@media screen and ( max-width: 880px){
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
   
-}
+  .navbar_logo {
+    padding: 8px;
+    padding-left: 0;
+  }
 
-.input-title{
-  font-family: "ChosunGs";
-  font-size: 2em;
-}
+  .navbar_menu {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
 
-.is-freshman {
-  margin-top: 30px;
-}
+  .navbar_menu li {
+    width: 100%;
+    text-align: center;
+    padding: 8px 24px;
+  }
 
-.is-freshman a {
-  text-decoration: none;
-}
+  .navbar_icons {
+    display: none;
+    justify-content: center;
+    width: 100%;
+    margin: 0;
+  }
 
-.is-freshman a:hover {
-  text-decoration: underline;
-}
+  .navbar_toggleBtn {
+    display: block;
+    position: absolute;
+    right: 16px;
+    font-size: 24px;
+    color: white;
+    padding-top: 4px;
+  }
 
-.info-input {
-  margin:0;
-  padding: 15px;
-}
-
-.conversion-btn {
-  width: 30%;
-  height: 5%;
-  margin-bottom: 2%;
-  margin-top: 2%;
-  padding: 10px;
-
-  background-color: rgb(238, 238, 238);
-  border-radius: 10px;
-  font-family: "ChosunGs";
-  font-size: 20px;
-}
-
-.conversion-btn:hover {
-  background-color: #ce6d39;
-}
-
-/* 사이드바 */
-
-aside {
-  margin-top: 10px;
-  padding: 10px;
-  border: 3px solid #6f4f28;
-  
-  width: 20%;
-  height: 100%;
-  
-  text-align: left;
-  font-family: "ChosunGs";
-
-  background: rgb(238, 238, 238);  
-}
-
-aside h1{
-  padding: 10px;
-  text-align: center;
-  font-size: 150%;
-}
-
-aside ul{
-  margin: 10px;
-  list-style-type: none;
-}
-
-aside a {
-  padding: 10px;
-  text-decoration: none;
-  color: brown;
-  font-size: 110%;
-}
-
-aside a:hover {
-  text-decoration: underline;
+  .navbar_menu.active,
+  .navbar_icons.active {
+    display: flex;
+  }
 }
