--- a/css/index.css
+++ b/css/index.css
@@ -181,11 +181,14 @@ a {
 
   header {
     height: 8%;
+    margin-bottom: 5%;
+
   }
 
   .navbar {
     flex-direction: column;
     align-items: flex-start;
+    
   }
   
   .navbar_logo {
