유지보수성 증가

--- a/index/css/header.css
+++ b/index/css/header.css
@@ -3,16 +3,17 @@
   justify-content: space-between;
   align-items: center;
 
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+    
   padding: 8px 12px;
   margin-bottom: 20px;
   box-sizing: border-box;
-  z-index: 9999;
-
-  position: fixed;
-  width: 100%;
+  z-index: 20;
 
   background-color: #0f1823;
-
 }
 
 .navbar_logo {
