--- a/index/css/dorm-rec.css
+++ b/index/css/dorm-rec.css
@@ -1,77 +1,97 @@
-.conversion_block {
+.dorm__rec {
+  display: flex;
+  justify-content: space-between;
   margin: 0px auto;
   margin-bottom: 20px;
   padding: 0;
-
-  display: flex;
-  justify-content: space-between;
-  background-color: #263343;
-
   border-radius: 12px;
   width: 95%;
   height: 50%;
-  }
-
-.conversion_block {
-  color:white;
+  background-color: #263343;
 }
 
-.conversion_block div {
+.dorm__rec div {
   display: flex;
   flex-direction: column;
-  align-items: center;
   width: 100%;
 }
 
-.conversion_title {
+.dorm__rec h1, p{
+  color: white;
+}
+
+.dorm__rec__title {
   display: flex;
   justify-content: flex-start;
-  font-size: 24px;
+  align-items: center;
+
+  padding: 24px;
+  font-size: 1em;
 }
 
-.conversion_block div form {
-  display: flex;
-  justify-content: center;
-  width: 70%;
-}
-
-.conversion_info {
+.dorm__rec__input {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
+
+
+  /* width: 100%;
+  height: 100%; */
+
+  padding: 24px;
+}
+
+.dorm__rec__input__title {
+  margin: 0 auto;
+  font-size: 2em;
+  margin-bottom: 12px;
+}
+
+.dorm__rec__input form {
+  display:flex;
+  flex-direction: row;
+  
+  background-color: blue;
+  
+  width: 100%;
+  height: 70%;
+}
+
+.dorm__rec__input form div {
+  display: flex;
+  justify-content: space-between;
+  max-width: 33.33%;
+}
+
+.input__box {
   
 }
 
-.conversion_info button {
-  position:relative;
-  left: 12px;
-  width: 20%;
+
+.dorm__rec__btn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.conversion_block i {
-  color: tomato;
-}
-
-@media screen and ( max-width: 880px){
-
-  .conversion_block {
+@media screen and (max-width: 880px) {
+  .dorm__rec {
     position: relative;
     flex-direction: column;
     justify-content: space-between;
   }
 
-  .conversion_block div {
+  .dorm__rec div {
     width: 100%;
     height: 30%;
   }
 
-  .conversion_block div form input {
+  .dorm__rec div form input {
     width: 50%;
   }
 
-  .conversion_block button {
+  #dorm__rec-input {
     width: 50%;
     height: 50%;
   }
-
 }
