--- a/index/css/dorm-rec.css
+++ b/index/css/dorm-rec.css
@@ -50,8 +50,8 @@
 .dorm__rec__input form {
   display:flex;
   flex-direction: row;
-  
-  background-color: blue;
+  align-items: center;
+  /* background-color: blue; */
   
   width: 100%;
   height: 70%;
@@ -60,18 +60,30 @@
 .dorm__rec__input form div {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   max-width: 33.33%;
 }
 
 .input__box {
-  
+  width: 50%;
 }
 
 
 .dorm__rec__btn {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
+
+  width: 100%;
+  height: 100%;
+}
+
+.dorm__rec__btn button {
+  width: 40%;
+  height: 40%;
+
+  font-size: 2em;
 }
 
 @media screen and (max-width: 880px) {
