home.html -> index.html 로 이름 변경

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,7 +37,7 @@
     <nav class="navbar top justify-content-between align-items-center p-3 w-100">
       <div class="navbar_logo">
         <i class="fa-solid fa-school"></i>
-        <a href="home.html">전북대 기숙사이트</a>
+        <a href="index.html">전북대 기숙사이트</a>
       </div>
 
       <ul class="navbar_menu mb-0">
