--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -250,32 +250,32 @@
           </div>
         </div>
 
-        <div class="card col-xxl-3 col-lg-4 col-md-6 col-sm-12 p-0" style="width: 18rem;">
-          <img src="./images/미리보기.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">추가 예정</h5>
-            <p class="card-text"></p>
-            <button class="btn btn-dark rounded-pill px-3" type="button">추가 예정</button>
-          </div>
-        </div>
+<!--        <div class="card col-xxl-3 col-lg-4 col-md-6 col-sm-12 p-0" style="width: 18rem;">-->
+<!--          <img src="./images/미리보기.png" class="card-img-top" alt="...">-->
+<!--          <div class="card-body">-->
+<!--            <h5 class="card-title">추가 예정</h5>-->
+<!--            <p class="card-text"></p>-->
+<!--            <button class="btn btn-dark rounded-pill px-3" type="button">추가 예정</button>-->
+<!--          </div>-->
+<!--        </div>-->
 
-        <div class="card col-xxl-3 col-lg-4 col-md-6 col-sm-12 p-0" style="width: 18rem;">
-          <img src="./images/미리보기.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">추가 예정</h5>
-            <p class="card-text"></p>
-            <button class="btn btn-dark rounded-pill px-3" type="button">추가 예정</button>
-          </div>
-        </div>
+<!--        <div class="card col-xxl-3 col-lg-4 col-md-6 col-sm-12 p-0" style="width: 18rem;">-->
+<!--          <img src="./images/미리보기.png" class="card-img-top" alt="...">-->
+<!--          <div class="card-body">-->
+<!--            <h5 class="card-title">추가 예정</h5>-->
+<!--            <p class="card-text"></p>-->
+<!--            <button class="btn btn-dark rounded-pill px-3" type="button">추가 예정</button>-->
+<!--          </div>-->
+<!--        </div>-->
 
-        <div class="card col-xxl-3 col-lg-4 col-md-6 col-sm-12 p-0" style="width: 18rem;">
-          <img src="./images/미리보기.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">추가 예정</h5>
-            <p class="card-text"></p>
-            <button class="btn btn-dark rounded-pill px-3" type="button">추가 예정</button>
-          </div>
-        </div>
+<!--        <div class="card col-xxl-3 col-lg-4 col-md-6 col-sm-12 p-0" style="width: 18rem;">-->
+<!--          <img src="./images/미리보기.png" class="card-img-top" alt="...">-->
+<!--          <div class="card-body">-->
+<!--            <h5 class="card-title">추가 예정</h5>-->
+<!--            <p class="card-text"></p>-->
+<!--            <button class="btn btn-dark rounded-pill px-3" type="button">추가 예정</button>-->
+<!--          </div>-->
+<!--        </div>-->
 
       </div>
     </div>
@@ -303,7 +303,7 @@
       <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">FAQs</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">About</a></li>
     </ul>
-    <p class="text-center text-secondary">© 2024 Company, Inc</p>
+    <p class="text-center text-secondary">© 2024. 개발새발 All right reserved.</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
