사이트 접속 오류 고침, view에 환산점수 뜸

--- a/java/demo/src/main/resources/static/css/index.css
+++ b/java/demo/src/main/resources/static/css/index.css
@@ -5,16 +5,14 @@
   font-style: normal;
 }
 
-html {
-  height: 100%;
+* {
+  box-sizing: border-box;
+  outline: none;
+  font-family: "NPSfontBold";
 }
 
-body {
-  margin: 0;
-  padding: 0;
+html,body {
   height: 100%;
-  font-family: 'NPSfontBold';
-  /* background-color: #263343; */
 }
 
 header {
@@ -24,259 +22,4 @@ header {
 a {
   text-decoration: none;
   color: white;
-}
-
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  padding: 8px 12px;
-  margin-bottom: 20px;
-  box-sizing: border-box;
-  z-index: 9999;
-
-  position: fixed;
-  width: 100%;
-
-  background-color: #0f1823;
-
-}
-
-.navbar_logo {
-  font-size: 24px;
-  padding-left: 12px;
-}
-
-.navbar_logo i {
-  color: tomato;
-}
-
-.navbar_menu {
-  display: flex;
-  list-style: none;
-  padding-left: 0;
-}
-
-.navbar_menu li {
-  padding: 8px 12px; 
-}
-
-.navbar_menu li:hover {
-  background-color: tomato;
-  border-radius: 8px;
-}
-
-.navbar_icons {
-  display: flex;
-  list-style: none;
-  padding-left: 0;
-  color: white;
-}
-
-.navbar_icons li {
-  padding: 8px 12px;
-}
-
-.navbar_icons li:hover {
-  background-color: tomato;
-  border-radius: 8px;
-}
-
-.navbar_toggleBtn {
-  display: none;
-}
-
-/* 정보 입력 폼 */
-
-.conversion_block {
-  margin: 0px auto;
-  margin-bottom: 20px;
-  padding: 0;
-
-  display: flex;
-  justify-content: space-between;
-  background-color: #263343;
-
-  border-radius: 12px;
-  width: 95%;
-  height: 50%;
-  }
-
-.conversion_block {
-  color:white;
-}
-
-.conversion_block div {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-}
-
-.conversion_block div form {
-  display: flex;
-  justify-content: center;
-  width: 70%;
-}
-
-.conversion_block i {
-  color: tomato;
-}
-
-.conversion_block h1 {
-  font-size: 150%;
-}
-
-
-.dorm_shortcuts {
-  display: flex;
-  justify-content: space-between;
-  margin: auto;
-
-  padding-left: 0;
-  padding: 0; 
-  
-  width: 95%;
-  height: 30%;
-  background-color: white;
-  border-radius: 12px;
-  gap: 12px;
-}
-
-.dorm_shortcuts div {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  gap: 24px;
-  padding: 12px;
-  
-  width: 30%;
-  background-color: #263343;
-  border-radius: 12px;
-}
-
-.dorm_shortcuts li {
-  list-style: none;
-  color: white;
-  font-size: 24px;
-  left: 12px;
-}
-
-.dorm_shortcuts i {
-  font-size: 40px;
-  color: tomato;
-  right: 12px;
-}
-
-.add_dorm_info {
-  display: none;
-}
-
-
-/* width가 880px 미만일 경우 */
-@media screen and ( max-width: 880px){
-
-  header {
-    height: 8%;
-    margin-bottom: 5%;
-
-  }
-
-  .navbar {
-    flex-direction: column;
-    align-items: flex-start;
-    
-  }
-  
-  .navbar_logo {
-    padding: 8px;
-    padding-left: 0;
-  }
-
-  .navbar_menu {
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-  }
-
-  .navbar_menu li {
-    width: 100%;
-    text-align: center;
-    padding: 8px 24px;
-  }
-
-  .navbar_icons {
-    display: none;
-    justify-content: center;
-    width: 100%;
-    margin: 0;
-  }
-
-  .navbar_toggleBtn {
-    display: block;
-    position: absolute;
-    right: 16px;
-    font-size: 24px;
-    color: white;
-    padding-top: 4px;
-  }
-
-  .navbar_menu.active,
-  .navbar_icons.active {
-    display: flex;
-  }
-
-  .conversion_block {
-    position: relative;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .conversion_block div {
-    width: 100%;
-    height: 30%;
-  }
-
-  .conversion_block div form input {
-    width: 50%;
-  }
-
-  .conversion_block button {
-    width: 50%;
-    height: 50%;
-  }
-
-
-  .dorm_shortcuts {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    
-    overflow: hidden;
-
-    box-sizing: border-box;
-    height: 50%;
-
-  }
-
-  .dorm_shortcuts div {
-    display: flex;
-    box-sizing: border-box;
-    padding: 12px;
-    width: 100%;
-    height: 20%;  
-  }
-
-  .dorm_shortcuts li {
-    font-size: 24px;
-  }
-
-  .dorm_shortcuts i {
-    font-size: 40px;
-  }
-
 }
